@@ -8,6 +8,8 @@
   o do not use --max-file-not-found=3 when downloading rpms 
     (since rpms are "versioned")
   o use it even if nearest mirror is rsync
+- library:
+  o allow mdkapplet-upgrade-helper to force $MIRRORLIST distro version
 
 Version 6.16 - 8 October 2008
 
